made api more responsive and clear